# django_equilibrium-

./: .gitignore  README.md  equilibrium_index.py  pyproject.toml  requirements.txt
core/: settings.py  urls.py
main/: admin.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_mainpagecontent_crop_header_image.py  0003_alter_mainpagecontent_header_image.py  0004_alter_mainpagecontent_content_and_more.py
templates/: index.html
